Fixed layout issue with nav

--- a/app/styles/mqs.css
+++ b/app/styles/mqs.css
@@ -67,11 +67,13 @@
 	}
 	header .container h2 {
 		font-size: 0.692em;
+		top: -0.8em;
 	}
 	header .container ul[role="tablist"] {
 		float: none;
 		width: 100%;
 		clear: both;
+		letter-spacing: -0.31em;
 	}
 		header .container ul[role="tablist"] li {
 			float: none;
@@ -84,12 +86,12 @@
 			-webkit-border-radius: 0;
 			border-radius: 0;
 			white-space: nowrap;
+			letter-spacing: normal;
 			-moz-box-sizing: border-box;
 	        -webkit-box-sizing: border-box;
 	        box-sizing: border-box;
 		}
 		header .container ul[role="tablist"] li:last-child {
-			width: 34.4%;
 			margin: 0 -1px 0 0;
 		}
 
